# boids

./: .gitignore  CMakeLists.txt  README.md
shaders/: boid.vert
src/: Boid.cpp  Boid.h  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  main.cpp
